Fixed spacing on many things

--- a/firstStyle.css
+++ b/firstStyle.css
@@ -21,6 +21,9 @@ body{
 	width: 100%;
 	height: 100%;
 }
+p{
+  margin: 0;
+}
 .sidebar{
 	left: 0;
 	top: 0;
@@ -72,6 +75,7 @@ body{
 .content-1{
 	padding: 0px;
 	width: 35%;
+  gap: 1rem;
 }
 .ability-cont{
 	background-color: var(--cyan-25);
@@ -106,7 +110,7 @@ body{
 	margin: 1rem 0 1rem 0;
 }
 .anivInfo{
-	height: 95%;
+  height: 95%;
 	width: 45%;
 	border: 5px solid var(--cyan-10);
 	border-radius: 5px;
@@ -121,11 +125,14 @@ body{
 	height: 100%;
 }
 .anivData{
-	height: 11%;
+	height: 100%;
 	text-align: center;
 	font: 1.5rem Segoe UI Semibold;
 	background-color: var(--cyan-50);
 	border-top: 5px solid var(--cyan-10);
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 .anivName{
 	font: 2rem Segoe UI Semibold;
@@ -153,7 +160,8 @@ body{
 	border: 5px solid var(--cyan-10);
 	border-radius: 5px;
 	padding: 0.5rem;
-	font: 1.1rem Rubik;
+	font: 0.875rem Rubik;
+  line-height: 1.5;
 	color: white;
 	height: 100%;
 	overflow: auto;
